[package]
name = "iso639"
description = "Command line tool and library for manipulating ISO639-1 and -3 tags, autonyms and data"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
repository = "https://github.com/bbqsrc/iso639"
license = "MIT OR Apache-2.0"

[[bin]]
name = "iso639"
required-features = ["structopt"]

[dependencies]
structopt = { version = "0.3.17", optional = true }
phf = "0.8.0"

[build-dependencies]
phf_codegen = "0.8.0"
csv = "1.1.3"

[features]
default = ["structopt"]

[profile.release]
lto = "fat"
